# FastAppTemplate

./: README.md  cookiecutter.json
development/: test_template.py
{{ cookiecutter.project_slug }}/: .cursorrules  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  seed_data.py
{{ cookiecutter.project_slug }}/.llms/: MonsterUI-ctx.txt  instructions.txt  llm_instructions.txt
{{ cookiecutter.project_slug }}/assets/: tailwind.config.js
{{ cookiecutter.project_slug }}/assets/content/blog/: notion.md  testing.md
{{ cookiecutter.project_slug }}/assets/content/docs/: Blog FDD.md  TASKS.md  design.md  developer_guide.md  development_plan.md  fastsaas_generator_plan.md  refactor_plan.md  saas_implementation_plan.md  user_guide.md
{{ cookiecutter.project_slug }}/assets/css/: custom_theme.css  custom_theme_green.css  input.css  output.css
{{ cookiecutter.project_slug }}/assets/js/: themeToggle.js
{{ cookiecutter.project_slug }}/migrations/: env.py
{{ cookiecutter.project_slug }}/scripts/: create_page.py  tailwind_install.py
{{ cookiecutter.project_slug }}/src/: cli.py  config.py  main.py  route_collector.py
{{ cookiecutter.project_slug }}/src/modules/: __init__.py
{{ cookiecutter.project_slug }}/src/modules/admin/: routes.py
{{ cookiecutter.project_slug }}/src/modules/auth/: models.py
{{ cookiecutter.project_slug }}/src/modules/blog/: models.py  routes.py
{{ cookiecutter.project_slug }}/src/modules/contact/: models.py  routes.py
{{ cookiecutter.project_slug }}/src/modules/docs/: notion.py  notion_testing.py  routes.py
(+73 files in other folders)
